services/base/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  type: ClusterIP
  ports:
    - port: 3096
      targetPort: 3096
  selector:
    app: jellyfin
